--- a/test_jupyt.ipynb
+++ b/test_jupyt.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "outputs": [],
    "source": [
-    "import torch\n"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import numpy as np\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-01T04:18:07.300607Z",
-     "start_time": "2024-01-01T04:18:07.297455Z"
+     "end_time": "2024-01-03T07:16:52.446886Z",
+     "start_time": "2024-01-03T07:16:52.435975Z"
     }
    },
    "id": "307bd5c9e2cb9ba"
@@ -304,7 +308,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "array_a=np.array([1,2,3,4,5])\n",
     "print(array_a)"
    ],
@@ -342,22 +345,6 @@
     }
    },
    "id": "e164db3991d22aa5"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-01T05:23:22.677828Z",
-     "start_time": "2024-01-01T05:23:22.615279Z"
-    }
-   },
-   "id": "1dd9188533fbb45a"
   },
   {
    "cell_type": "code",
@@ -678,24 +665,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "outputs": [],
    "source": [
     "scores=torch.tensor([[1.0, 1.2, 1.4, 1.5, 1.6, 1.7]])\n",
-    "softmax=nn.Softmax( dim=1 )"
+    "softmax=nn.Softmax( dim=-1)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-01T06:53:21.667571Z",
-     "start_time": "2024-01-01T06:53:21.649774Z"
+     "end_time": "2024-01-01T07:31:54.320717Z",
+     "start_time": "2024-01-01T07:31:54.313624Z"
     }
    },
    "id": "977e82e09979dda0"
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "probability=softmax(scores)"
@@ -703,15 +690,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-01T06:53:27.051399Z",
-     "start_time": "2024-01-01T06:53:27.033519Z"
+     "end_time": "2024-01-01T07:31:55.865578Z",
+     "start_time": "2024-01-01T07:31:55.860468Z"
     }
    },
    "id": "1861eb0755e69509"
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "outputs": [
     {
      "name": "stdout",
@@ -727,11 +714,266 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-01T06:53:29.597583Z",
-     "start_time": "2024-01-01T06:53:29.582889Z"
+     "end_time": "2024-01-01T07:31:56.834762Z",
+     "start_time": "2024-01-01T07:31:56.829729Z"
     }
    },
    "id": "7a07335254c7e141"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [],
+   "source": [
+    "input_tensor=torch.tensor([[3,4,6,2,3,6,8,9]])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-02T08:11:26.488540Z",
+     "start_time": "2024-01-02T08:11:26.486480Z"
+    }
+   },
+   "id": "7d95f28ac603518f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[3, 4, 6, 2, 3, 6, 8, 9]])"
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model=nn.Sequential(\n",
+    "    nn.Linear(8,4),\n",
+    "    nn.Linear(4,1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n",
+    "input_tensor"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T06:53:35.817554Z",
+     "start_time": "2024-01-03T06:53:35.805939Z"
+    }
+   },
+   "id": "bbfae3394ff1210"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "tensor([[3, 4, 6, 2, 3, 6, 8, 9]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_hot_numpy=np.zeros((8,10))\n",
+    "one_hot_numpy[range(8),input_tensor]\n",
+    "print(one_hot_numpy)\n",
+    "print(input_tensor)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:12:30.229031Z",
+     "start_time": "2024-01-03T07:12:30.220269Z"
+    }
+   },
+   "id": "fec395758b164332"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "outputs": [],
+   "source": [
+    "one_hot_numpy=np.array([1,0.0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:15:48.240271Z",
+     "start_time": "2024-01-03T07:15:48.225127Z"
+    }
+   },
+   "id": "b476a5c8ead4b6c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([1, 0, 0])"
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F.one_hot(torch.tensor(0), num_classes=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:31:57.061969Z",
+     "start_time": "2024-01-03T07:31:57.046722Z"
+    }
+   },
+   "id": "1aa1a6208b2aaa42"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[1, 0, 0],\n        [0, 1, 0],\n        [0, 0, 1]])"
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F.one_hot(torch.arange(0,3), num_classes=3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:33:35.115926Z",
+     "start_time": "2024-01-03T07:33:35.107830Z"
+    }
+   },
+   "id": "3e16aa57ef79ff27"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "outputs": [],
+   "source": [
+    "scores=torch.tensor([[-0.1211, 0.1059]])\n",
+    "one_hot_target=torch.tensor([[1,0]])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:36:02.424919Z",
+     "start_time": "2024-01-03T07:36:02.420235Z"
+    }
+   },
+   "id": "81a53e16167a939f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "outputs": [],
+   "source": [
+    "loss=nn.CrossEntropyLoss()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:36:33.959381Z",
+     "start_time": "2024-01-03T07:36:33.934495Z"
+    }
+   },
+   "id": "f1984f87490442fb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(0.8131, dtype=torch.float64)"
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss(scores.double(), one_hot_target.double())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:37:30.745987Z",
+     "start_time": "2024-01-03T07:37:30.718094Z"
+    }
+   },
+   "id": "82d60cf46fa495b0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.float32"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.dtype"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:38:12.945189Z",
+     "start_time": "2024-01-03T07:38:12.919288Z"
+    }
+   },
+   "id": "5ca842852476dba"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([1, 2])"
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T07:38:26.051717Z",
+     "start_time": "2024-01-03T07:38:26.025436Z"
+    }
+   },
+   "id": "f0065372bd42bf61"
   },
   {
    "cell_type": "code",
@@ -741,7 +983,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "7d95f28ac603518f"
+   "id": "6d2a273621226443"
   }
  ],
  "metadata": {
