--- a/test_jupyt.ipynb
+++ b/test_jupyt.ipynb
@@ -977,13 +977,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "outputs": [],
+   "source": [
+    "output=torch.tensor([[0.3, 0.7]])\n",
+    "output_target=torch.tensor([[0.0, 1.0]])\n",
+    "\n",
+    "one_hot_1=F.one_hot(torch.arange(0,1), num_classes=2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T08:57:18.567754Z",
+     "start_time": "2024-01-03T08:57:18.558130Z"
+    }
+   },
+   "id": "6d2a273621226443"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 0]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(one_hot_1)\n",
+    "loss=nn.CrossEntropyLoss()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T08:57:19.329736Z",
+     "start_time": "2024-01-03T08:57:19.326528Z"
+    }
+   },
+   "id": "4427eb57e4847a55"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(0.9130, dtype=torch.float64)"
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss(output.double(), one_hot_1.double())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-03T08:57:22.079253Z",
+     "start_time": "2024-01-03T08:57:22.076684Z"
+    }
+   },
+   "id": "ae1f4fabb5e28796"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "6d2a273621226443"
+   "id": "8dce8da01b4f86a"
   }
  ],
  "metadata": {
